--- a/setState.html
+++ b/setState.html
@@ -16,6 +16,7 @@
         const clickEvent = () => {
             // setCount(count + 1);
             //count 변수가 원하는 값이 아닐 수 있으므로 변경
+            // 현재값 + 1
             setCount((current) => current + 1);
         };
         return (
